--- a/assets/index.css
+++ b/assets/index.css
@@ -1,17 +1,23 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f7f7f7;
+    background-color: white;
+    background-image: url("./img/Fondo.svg");
     margin: 0;
     padding: 0;
 }
 
 header {
-    background-color: #333;
-    color: #fff;
+    background-color: white;
+    color: black;
     padding: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.img-sm {
+    max-width: 10%;
+    height: auto;
 }
 
 header h1 {
@@ -30,15 +36,15 @@ nav li {
 }
 
 nav a {
-    color: #fff;
+    color: grey;
     text-decoration: none;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 14px;
     transition: all 0.2s ease-in-out;
 }
 
 nav a:hover {
-    color: #ffd700;
+    color: #dc3545;
 }
 
 main {
@@ -50,6 +56,14 @@ main {
 
 main h2 {
     margin-top: 0;
+}
+
+.curso-back{
+    background-color: white;
+}
+
+.founder-back{
+    background-color: white;
 }
 
 article {
@@ -68,10 +82,7 @@ section {
 }
 
 aside {
-    width: 25%;
-    background-color: #fff;
-    padding: 20px;
-    border: 1px solid #ccc;
+    padding: 10px;
     border-radius: 5px;
 }
 
@@ -87,7 +98,6 @@ aside ul {
 form {
     width: 300px;
     margin: auto;
-    border: 1px solid #ccc;
     padding: 25px;
     border-radius: 5px;
   }
@@ -103,13 +113,13 @@ form {
     width: 100%;
     padding: 10px;
     margin-bottom: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid blue;
     border-radius: 5px;
     box-sizing: border-box;
   }
   
   input[type="submit"] {
-    background-color: #4CAF50;
+    background-color: #0C6CA8;
     color: white;
     padding: 12px 20px;
     border: none;
@@ -120,7 +130,7 @@ form {
   }
   
   input[type="submit"]:hover {
-    background-color: #45a049;
+    background-color: #0C6CA8;
   }
   
 
@@ -137,8 +147,8 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    background-color: #333;
-    color: #fff;
+    background-color: #f7f7f7;
+    color: black;
     text-align: center;
     padding: 10px;
 
@@ -147,3 +157,5 @@ footer {
 footer p {
     margin: 0;
 }
+
+
